--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -9,6 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lawwa.Asia</title>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/lawwa-img/favicon.ico"/>
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
@@ -33,10 +36,12 @@
     <header class="header-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12">
+            <!-- <div class="row" style="background-image: url('img/lawwa-img/wavey2.png');"> -->
+                <!-- <div class="row" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));"> -->
+                <div class="col-lg-12" >
                     <div class="logo">
                         <a href="./index.html">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px">
                         </a>
                     </div>
                     <nav class="nav-menu mobile-menu">
@@ -70,86 +75,61 @@
     <!-- Hero Section Begin -->
     <section class="hero-section">
         <div class="hs-slider owl-carousel">
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hs-item set-bg" data-setbg="img/lawwa-img/festivebanner01.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="hs-text">
-                                <h2>Photography Studio</h2>
+                                <h2>Happy Thaipusam From Lawwa.Asia</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et<br /> dolore magna aliqua. Quis ipsum suspendisse ultrices
                                     gravida accumsan lacus vel facilisis.</p>
-                                <a href="#" class="primary-btn">Contact us</a>
+                                <!-- <a href="#" class="primary-btn">Contact us</a> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-2.jpg">
+            <div class="hs-item set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="hs-text">
-                                <h2>Photography Studio</h2>
+                                <h2></h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et<br /> dolore magna aliqua. Quis ipsum suspendisse ultrices
                                     gravida accumsan lacus vel facilisis.</p>
-                                <a href="#" class="primary-btn">Contact us</a>
+                                <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="primary-btn" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));">Join Today!</a>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-lg-12" style="position: absolute; bottom: 0;">
+                            <h1>social medi links section</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Hero Section End -->
+    <br>
+    <br>
 
-    <!-- Services Section Begin -->
-    <section class="services-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="services-item">
-                        <img src="img/services/service-1.jpg" alt="">
-                        <h3>Shooting</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="services-item">
-                        <img src="img/services/service-2.jpg" alt="">
-                        <h3>Videos</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="services-item">
-                        <img src="img/services/service-3.jpg" alt="">
-                        <h3>Editing</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Services Section End -->
+    <!-- Hero Section End -->
 
     <!-- Categories Section Begin -->
     <section class="categories-section">
-        <div class="container">
+        <div class="container mt-10">
             <div class="row">
                 <div class="col-lg-6 col-md-6">
-                    <div class="section-title">
-                        <h2>Categories</h2>
+                    <div class="section-title"> 
+                        <h2>Our Services</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
                             incididunt ut labore et dolore.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <div class="right-btn"><a href="#" class="primary-btn">VIew all</a></div>
+                    <div class="right-btn"><a href="#" class="cust-lawwa-gradient">View all</a></div>
                 </div>
             </div>
             <div class="categories-slider owl-carousel">
@@ -192,120 +172,60 @@
         </div>
     </section>
     <!-- Categories Section End -->
+    <br>    <br>
+    <br>
+    <br>
 
-    <!-- Portfolio Section Begin -->
-    <section class="portfolio-section spad">
+    <!-- Services Section Begin -->
+    <section class="services-section spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-4 col-md-4">
                     <div class="section-title">
-                        <h2>Our latest works</h2>
+                        <h2>Our Membership Program</h2>
+                        <p>Becoming A Member Of The Lawwa.Asia Program Rewards You With Exclusive Treats You Cant Get Anywhere Else!</p>
                     </div>
-                    <div class="filter-controls">
-                        <ul>
-                            <li class="active" data-filter="*">All</li>
-                            <li data-filter=".fashion">Fashion</li>
-                            <li data-filter=".lifestyle">Lifestyle</li>
-                            <li data-filter=".natural">Natural</li>
-                            <li data-filter=".wedding">Wedding</li>
-                            <li data-filter=".videos">Videos</li>
-                        </ul>
+                </div> -->
+                <div class="col-lg-12 col-md-12 text-center">
+                    <div class="section-title" >
+                        <h2>Our Membership Program</h2>
+                        <p>Becoming A Member Of The Lawwa.Asia Program Rewards You With Exclusive Treats You Cant Get Anywhere Else!</p>
                     </div>
                 </div>
+                <!-- <div class="col-lg-3 col-md-3">
+                    <div class="right-btn"><a href="#" class="cust-lawwa-gradient">Sign Up For Free!</a></div>
+                </div> -->
             </div>
-        </div>
-        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 p-0">
-                    <div class="portfolio-filter">
-                        <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-1.jpg">
-                            <a href="img/portfolio/pf-1.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item large-width large-height set-bg lifestyle"
-                            data-setbg="img/portfolio/pf-2.jpg">
-                            <a href="img/portfolio/pf-2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item large-width set-bg natural" data-setbg="img/portfolio/pf-3.jpg">
-                            <a href="img/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item large-height set-bg wedding" data-setbg="img/portfolio/pf-4.jpg">
-                            <a href="img/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item set-bg lifestyle" data-setbg="img/portfolio/pf-7.jpg">
-                            <a href="img/portfolio/pf-7.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item set-bg natural" data-setbg="img/portfolio/pf-8.jpg">
-                            <a href="img/portfolio/pf-8.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item set-bg videos" data-setbg="img/portfolio/pf-5.jpg">
-                            <a href="img/portfolio/pf-5.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-6.jpg">
-                            <a href="img/portfolio/pf-6.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item large-width set-bg videos" data-setbg="img/portfolio/pf-10.jpg">
-                            <a href="img/portfolio/pf-10.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-11.jpg">
-                            <a href="img/portfolio/pf-11.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
-                        <div class="pf-item large-width large-height set-bg wedding"
-                            data-setbg="img/portfolio/pf-9.jpg">
-                            <a href="img/portfolio/pf-9.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                            <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
-                            </div>
-                        </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/services/service-1.jpg" alt="">
+                        <h3>Services</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/services/service-2.jpg" alt="">
+                        <h3>Products</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/services/service-3.jpg" alt="">
+                        <h3>Membership Kit</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="load-more-btn">
-            <a href="#">Load More</a>
         </div>
     </section>
-    <!-- Portfolio Section End -->
+    <!-- Services Section End -->
+
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
@@ -315,11 +235,10 @@
                     <div class="fs-about">
                         <div class="fa-logo">
                             <a href="#">
-                                <img src="img/f-logo.png" alt="">
+                                <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" >
                             </a>
                         </div>
-                        <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</p>
+                        <p>Reach Out To Us On Any Of Our Social Media Platforms<br>We Would Love To Hear From You</p>
                         <div class="fa-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -367,9 +286,8 @@
                 </div>
                 <div class="col-lg-12">
                     <div class="copyright-text">
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                        <p>
+  Copyright &copy; 2021 All rights reserved | Trokatech Resources
                     </div>
                 </div>
             </div>
